[gd_scene load_steps=3 format=3 uid="uid://difup7wfnhqwk"]

[ext_resource type="Script" path="res://Scripts/test_player1score.gd" id="1_j865e"]
[ext_resource type="PackedScene" uid="uid://k13aykl28n7q" path="res://Scenes/player_1_sub_panel.tscn" id="2_0wif1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j865e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreButton" type="Button" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "UpdateScore"

[node name="FourWaysButton" type="Button" parent="VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Update4Ways"

[node name="Player1_subPanel" parent="VBoxContainer" instance=ExtResource("2_0wif1")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ScoreButton" to="." method="_on_score_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FourWaysButton" to="." method="_on_four_ways_button_pressed"]
